--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactnative-firebase",
+  "name": "notesapp",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,14 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-masked-view/masked-view": "0.2.9",
+    "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@shopify/flash-list": "1.4.3",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
-    "firebase": "^10.6.0",
+    "firebase": "^9.6.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0"
+    "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
